# platform.core.appfw.widget-viewer

./: CMakeLists.txt  LICENSE  dynamicbox_viewer.pc.in  livebox-viewer.pc.in  project.config
dynamicbox_viewer/: CMakeLists.txt  dynamicbox_viewer.pc.in
dynamicbox_viewer/TC/: config
dynamicbox_viewer/TC/results/: build-tar-result-1388117277.journal  build-tar-result-1388117423.journal  build-tar-result-1388117533.html
dynamicbox_viewer/TC/testcase/: utc_livebox_viewer.c
dynamicbox_viewer/doc/: dynamicbox_viewer_doc.h
dynamicbox_viewer/include/: conf.h  debug.h  desc_parser.h  dlist.h  dynamicbox.h  dynamicbox_internal.h  master_rpc.h
dynamicbox_viewer/src/: client.c  desc_parser.c  dlist.c  dynamicbox.c  dynamicbox_internal.c  fb.c  fb_wayland.c  file_service.c  master_rpc.c
dynamicbox_viewer_evas/res/: CMakeLists.txt  dynamicbox_viewer_evas.edc
live-viewer/: CMakeLists.txt
live-viewer/include/: CLiveBox.h  CLiveBoxMgr.h  CMain.h  CUtil.h
live-viewer/packaging/: live-viewer.spec
live-viewer/res/: CMakeLists.txt  live-viewer.edc
live-viewer/src/: CLiveBox.cpp  CLiveBoxMgr.cpp  CMain.cpp  CResourceMgr.cpp  CUtil.cpp
live.viewer/: CMakeLists.txt  NOTICE  com.samsung.w-add-viewer.rule  com.samsung.w-add-viewer.xml  live.viewer.xml
live.viewer/dbox.app/: CMakeLists.txt
live.viewer/dbox.app-dbox.only/: CMakeLists.txt
live.viewer/dbox.app-dbox.only/src/: instance.c  main.c
live.viewer/dbox.app-template/: CMakeLists.txt
live.viewer/dbox.app-template/src/: main.c
live.viewer/dbox.app/data/: com.samsung.elm-demo-tizen.desktop.in  elm_demo_tizen.edc
live.viewer/dbox.app/include/: access.h  autoscroll.h  bubble.h  button.h  center_popup.h  check.h  colorclass.h  colorselector.h  config.h  config_abort.h  config_mirror.h  config_scrolling.h  controlbar_animation.h  controlbar_vertical.h  ctxpopup.h  datetime.h  debug.h  dialoguegroup.h  dnd.h  dnd_gengrid_box.h  dnd_genlist_gengrid.h  dnd_layout_genlist.h  drawer.h  elmdemo_test.h  elmdemo_util.h  elmglviewgears.h  entry.h  fake-tizen.h  fastscroll.h  floating.h  fonteffecttest.h  fonttest.h  gengrid.h  genlist.h  handler.h  imageslider.h  index.h  indicator.h  instance.h  label.h  (+37 more)
live.viewer/dbox.app/res/: CMakeLists.txt
live.viewer/dbox.app/src/: access.c  autoscroll.c  bubble.c  button.c  center_popup.c  check.c  colorclass.c  colorselector.c  colorselector_components.c  colorselector_palette.c  colorselector_plane.c  config.c  config_abort.c  config_mirror.c  config_scrolling.c  ctxpopup.c  datetime.c  dialoguegroup.c  dnd.c  dnd_gengrid_box.c  dnd_genlist_gengrid.c  dnd_layout_genlist.c  drawer.c  elmdemo_test.c  elmdemo_util.c  elmglviewgears.c  entry.c  fake_tizen.c  fastscroll.c  floating.c  fonteffecttest.c  fonttest.c  gengrid.c  gengrid_customized_incheck.c  gengrid_customized_theme.c  gengrid_default.c  gengrid_gridtext.c  gengrid_groupindex.c  genlist_normal.c  handler.c  (+55 more)
live.viewer/dbox.calendar/: CMakeLists.txt
live.viewer/dbox.calendar/data/: CMakeLists.txt  w_calendar_icon.edc
live.viewer/dbox.calendar/include/: main.h
live.viewer/dbox.calendar/src/: main.c  virtual_canvas.c
live.viewer/dbox.image/: CMakeLists.txt
live.viewer/dbox.image/data/: CMakeLists.txt  hello.edc
live.viewer/dbox.image/src/: main.c
live.viewer/dbox.scroller/: CMakeLists.txt
live.viewer/dbox.scroller/data/: CMakeLists.txt
live.viewer/dbox.scroller/include/: genlist06.h
live.viewer/dbox.scroller/src/: genlist06.c  main.c
live.viewer/dbox.simple/: CMakeLists.txt
live.viewer/dbox.simple/data/: CMakeLists.txt  simple.edc
live.viewer/dbox.simple/include/: main.h
live.viewer/dbox.simple/src/: main.c
live.viewer/dbox.text/: CMakeLists.txt
live.viewer/dbox.text/data/: hello.edc
live.viewer/dbox.text/include/: main.h
live.viewer/dbox.text/src/: main.c
live.viewer/dbox.transit/: CMakeLists.txt
live.viewer/dbox.transit/data/: CMakeLists.txt
live.viewer/dbox.transit/include/: transit04.h
live.viewer/dbox.transit/src/: main.c  transit04.c
live.viewer/dbox.video/: CMakeLists.txt
live.viewer/dbox.video/data/: hello.edc
live.viewer/dbox.video/include/: main.h  player.h
live.viewer/dbox.win/: CMakeLists.txt
live.viewer/deprecated/: CLiveBoxMgr.cpp  CMain.h  CUtil.cpp
live.viewer/include/: CLiveBox.h  CLiveBoxMgr.h  CResourceMgr.h  CUtil.h  debug.h  dlist.h  lb.h  live_scroller.h  main.h  scroller.h  util.h
live.viewer/packaging/: com.samsung.w-add-viewer.manifest  com.samsung.w-add-viewer.spec  live.viewer.spec
live.viewer/res/: CMakeLists.txt  live-viewer.edc
live.viewer/src/: CLiveBox.cpp  CMain.cpp  CUtil.cpp  dlist.c  dlist.cpp  lb.c  live_scroller.c  main.c  scroller.c  util.c
live.viewer/viewer/: CMakeLists.txt  com.samsung.w-add-viewer.desktop.in
livebox-viewer/: CMakeLists.txt  livebox-viewer.pc.in
livebox-viewer/src/: livebox.c
widget_toolkit/: CMakeLists.txt  widget_toolkit.pc.in
widget_toolkit/include/: compositor.h
widget_toolkit/src/: compositor.c
widget_viewer/: CMakeLists.txt  widget_viewer.pc.in
widget_viewer/doc/: widget_viewer_doc.h
widget_viewer/include/: conf.h  desc_parser.h  master_rpc.h  util.h  widget_viewer.h  widget_viewer_internal.h
widget_viewer/src/: client.c  conf.c  desc_parser.c  dlist.c  fb.c  fb_wayland.c  file_service.c  master_rpc.c  util.c  widget.c  widget_internal.c
widget_viewer_dali/: CMakeLists.txt  widget_viewer_dali.pc.in
widget_viewer_dali/public_api/: widget_viewer_dali.h
widget_viewer_evas/: CMakeLists.txt  widget_viewer_evas.pc.in
widget_viewer_evas/doc/: widget_viewer_evas_doc.h
widget_viewer_evas/include/: util.h  watch_control.h  widget_viewer_evas.h  widget_viewer_evas_internal.h
widget_viewer_evas/res/: CMakeLists.txt  widget_viewer_evas.edc
widget_viewer_evas/src/: util_wayland.c  util_x11.c  watch_control.c  widget_viewer_evas.c
widget_viewer_sdk/: CMakeLists.txt  org.tizen.widget_viewer_sdk.efl  org.tizen.widget_viewer_sdk.xml
widget_viewer_sdk/data/: CMakeLists.txt  widget_viewer_sdk.edc
widget_viewer_sdk/include/: debug.h  main.h
widget_viewer_sdk/src/: main.c
(+355 files in other folders)
