CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY(widget_toolkit)
ADD_SUBDIRECTORY(widget_viewer)
ADD_SUBDIRECTORY(widget_viewer_evas)
ADD_SUBDIRECTORY(widget_viewer_sdk)
ADD_SUBDIRECTORY(watch-control)

ADD_DEPENDENCIES(widget_viewer_evas widget_toolkit)
ADD_DEPENDENCIES(watch-control widget_toolkit)
ADD_DEPENDENCIES(widget_viewer_sdk widget_viewer_evas)
