CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(w-add-viewer C)

SET(PACKAGE ${PROJECT_NAME})
SET(VENDOR "samsung")
SET(PKGNAME "com.${VENDOR}.${PACKAGE}")
SET(PREFIX "/usr/apps/${PKGNAME}")
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(USRDATADIR "/usr/apps/com.${VENDOR}.${PACKAGE}/data")
SET(DATADIR "/opt/usr/apps/com.${VENDOR}.${PACKAGE}/data")
SET(LOCALEDIR "${RESDIR}/locale")
#SET(ICONDIR "/usr/share/icons/default/small")
SET(IMAGEDIR "${RESDIR}/images/${PACKAGE}")
SET(SOUNDDIR "${RESDIR}/sound/${PACKAGE}")
SET(EDJDIR "${RESDIR}/edje")
SET(LIBEXECDIR "${PREFIX}/libexec")

ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DNDEBUG")
ADD_DEFINITIONS("-DPATH_MAX=256")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_SUBDIRECTORY(dbox.calendar)
ADD_SUBDIRECTORY(viewer)
ADD_SUBDIRECTORY(dbox.app)
ADD_SUBDIRECTORY(dbox.video)
ADD_SUBDIRECTORY(dbox.scroller)
ADD_SUBDIRECTORY(dbox.app-dbox.only)
ADD_SUBDIRECTORY(dbox.text)
ADD_SUBDIRECTORY(dbox.transit)
ADD_SUBDIRECTORY(dbox.image)
ADD_SUBDIRECTORY(dbox.simple)
ADD_SUBDIRECTORY(dbox.win)
#ADD_SUBDIRECTORY(dbox.app-template)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION /usr/share/license RENAME ${PKGNAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}.rule DESTINATION /etc/smack/accesses2.d)

