CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(widget_viewer_sdk C)

SET(PACKAGE ${PROJECT_NAME})
SET(VENDOR "tizen")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(PREFIX "/usr/apps/${PKGNAME}")
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(SHARED_RESDIR "${PREFIX}/shared/res")
SET(USRDATADIR "/usr/apps/org.${VENDOR}.${PACKAGE}/data")
SET(DATADIR "/opt/usr/apps/org.${VENDOR}.${PACKAGE}/data")
SET(LOCALEDIR "${RESDIR}/locale")
SET(ICONDIR "/usr/share/icons/default/small")
SET(IMAGEDIR "${RESDIR}/images/${PACKAGE}")
SET(SOUNDDIR "${RESDIR}/sound/${PACKAGE}")
SET(EDJDIR "${RESDIR}/edje")
SET(LIBEXECDIR "${PREFIX}/shared/libexec")

ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DSHARED_RESDIR=\"${SHARED_RESDIR}\"")
ADD_DEFINITIONS("-DNDEBUG")
ADD_DEFINITIONS("-DLOG_TAG=\"WIDGET_SDK\"")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")

INCLUDE(FindPkgConfig)
pkg_check_modules(sdk_pkgs REQUIRED
	capi-appfw-application
	appcore-efl
	ecore
	evas
	edje
	vconf
	bundle
    dlog
	widget_service
	efl-extension
)

ADD_DEFINITIONS("-DWIDGET_EVAS_RESOURCE_EDJ=\"${EDJDIR}/widget_viewer_sdk.edj\"")
ADD_DEFINITIONS("-DWIDGET_EVAS_RESOURCE_PD=\"gbar\"")
ADD_DEFINITIONS("-DWIDGET_EVAS_RESOURCE_LB=\"widget\"")
ADD_DEFINITIONS("-DWIDGET_EVAS_RESOURCE_IMG=\"widget,image\"")
ADD_DEFINITIONS(${sdk_pkgs_CFLAGS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../widget_viewer_evas/include)

ADD_EXECUTABLE(${PROJECT_NAME} src/main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${sdk_pkgs_LDFLAGS} "-lm -pie -fPIC" widget_viewer_evas)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}.efl DESTINATION /etc/smack/accesses.d RENAME ${PKGNAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE DESTINATION /usr/share/license RENAME ${PKGNAME})
INSTALL(DIRECTORY DESTINATION ${DATADIR})

ADD_SUBDIRECTORY(data)

# End of a file
