CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# install edj
ADD_CUSTOM_TARGET(scroller.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images ${EDJE_CFLAGS}
		${CMAKE_CURRENT_SOURCE_DIR}/scroller.edc scroller.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/scroller.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} scroller.edj)
INSTALL(FILES scroller.edj DESTINATION ${EDJDIR})
