CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# install edj
ADD_CUSTOM_TARGET(simple.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images ${EDJE_CFLAGS}
		${CMAKE_CURRENT_SOURCE_DIR}/simple.edc simple.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/simple.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} simple.edj)
INSTALL(FILES simple.edj DESTINATION ${EDJDIR})
